; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_gencode.c_xfer_to_a.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_gencode.c_xfer_to_a.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.slist = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.arth = type { i32 }

@BPF_LD = common dso_local global i32 0, align 4
@BPF_MEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.slist* (i32*, %struct.arth*)* @xfer_to_a to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.slist* @xfer_to_a(i32* %0, %struct.arth* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.arth*, align 8
  %5 = alloca %struct.slist*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.arth* %1, %struct.arth** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* @BPF_LD, align 4
  %8 = load i32, i32* @BPF_MEM, align 4
  %9 = or i32 %7, %8
  %10 = call %struct.slist* @new_stmt(i32* %6, i32 %9)
  store %struct.slist* %10, %struct.slist** %5, align 8
  %11 = load %struct.arth*, %struct.arth** %4, align 8
  %12 = getelementptr inbounds %struct.arth, %struct.arth* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.slist*, %struct.slist** %5, align 8
  %15 = getelementptr inbounds %struct.slist, %struct.slist* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  store i32 %13, i32* %16, align 4
  %17 = load %struct.slist*, %struct.slist** %5, align 8
  ret %struct.slist* %17
}

declare dso_local %struct.slist* @new_stmt(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
